# any-managed-agents

./: .dependency-cruiser.cjs  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  biome.json  drizzle.config.ts  eslint.config.js  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.production.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json  tsconfig.web.json  vite.config.ts  vitest.cloudflare.config.ts  vitest.config.ts  wrangler.test.toml  wrangler.toml
sdk/python/: README.md  openapi-python-client.config.yaml  openapi.json  pyproject.toml
sdk/python/ama_sdk/: __init__.py  client.py  facade.py  operations.py
sdk/python/ama_sdk/models/: __init__.py  agent.py  agent_handoff.py  agent_handoff_accepts.py  agent_handoff_candidate.py  agent_handoff_candidate_list_response.py  agent_handoff_policy.py  agent_handoff_target.py  agent_list_response.py  agent_memory.py  agent_memory_metadata.py  agent_memory_policy.py  agent_memory_spec.py  agent_memory_spec_metadata.py  agent_memory_status.py  agent_metadata.py  agent_spec.py  agent_spec_metadata.py  agent_status.py  agent_subagent.py  agent_subagent_input.py  agent_tool_attachment.py  agent_tool_attachment_approval_mode.py  agent_tool_attachment_input.py  agent_tool_attachment_input_approval_mode.py  agent_tool_attachment_input_input_schema.py  agent_tool_attachment_input_policy_metadata.py  agent_tool_attachment_input_schema.py  agent_tool_attachment_policy_metadata.py  agent_version.py  agent_version_metadata.py  (+802 more)
(+1200 files in other folders)
