[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-managed-agents-sdk"
version = "0.1.0"
description = "Generated Python SDK scaffold for the Any Managed Agents control-plane API"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["ama_sdk"]
