[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-managed-agents-sdk"
version = "0.1.0"
description = "Generated Python SDK for the Any Managed Agents control-plane API"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.23.1,<0.29.0",
    "attrs>=22.2.0",
    "websockets>=14.0,<16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ama_sdk"]
